# wenv

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  test_heredoc.ps1  test_validation.sh
.code-tree/: .index-meta.json  code-symbols.json  project-structure.json
.github/workflows/: release.yml
.serena/: project.yml
assets/i18n/: en.toml
docs/: ENTRY_MODEL.md  PARSE_FORMAT_FLOW.md  PENDING_STATE_MACHINE.md  parser-flow.md
languages/: zh-TW.toml
src/: cache.rs  lib.rs  main.rs
src/backup/: mod.rs
src/checker/: duplicate.rs  mod.rs  syntax.rs
src/cli/: args.rs  context.rs  mod.rs
src/cli/actions/: export.rs  import.rs  mod.rs  source.rs
src/cli/commands/: add.rs  backup.rs  check.rs  edit.rs  export.rs  format.rs  import.rs  info.rs  list.rs  mod.rs  remove.rs  tui_cmd.rs
src/config/: mod.rs
src/formatter/: bash.rs  indent.rs  mod.rs  pwsh.rs
src/i18n/: en.rs  mod.rs  zh_tw.rs
src/model/: config.rs  entry.rs  mod.rs  shell.rs
src/parser/: bash.rs  common.rs  mod.rs  pending.rs  pwsh.rs
src/parser/bash/: control.rs  mod.rs  parsers.rs  patterns.rs
src/parser/builders/: code_block.rs  comment.rs  function.rs  mod.rs  quoted.rs
src/parser/pwsh/: control.rs  mod.rs  parsers.rs  patterns.rs
src/tui/: app.rs  event.rs  mod.rs  ui.rs
src/utils/: dependency.rs  http.rs  mod.rs  path.rs  path_merge.rs  shell_detect.rs  strings.rs
tests/: parser_fixes_test.rs  pwsh_heredoc_integration.rs
tests/fixtures/: sample_bashrc  sample_profile.ps1
tests/integration/: bash_tests.rs  mod.rs  pwsh_tests.rs
