[package]
name = "wenv"
version = "0.7.1"
edition = "2021"
authors = ["wen"]
description = "Shell configuration file manager - Cross-platform Shell RC file management tool"
license = "MIT"
repository = "https://github.com/superyngo/wenv"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# Regular expressions
regex = "1"
lazy_static = "1"

# Path handling
dirs = "5"

# Interactive prompts
dialoguer = "0.11"

# Terminal output
colored = "2"
terminal_size = "0.3"

# TUI framework
ratatui = "0.26"
crossterm = "0.27"

# Error handling
anyhow = "1"
thiserror = "1"

# Date/Time
time = { version = "0.3", features = ["formatting", "macros"] }

# HTTP requests (URL import)
ureq = { version = "2", features = ["native-certs"] }
url = "2"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
strip = true
